2003-05-15  JP Rosevear  <jpr@ximian.com>
 
 	Fixes #41935
 	
 	* gui/e-week-view.c (e_week_view_init): listen for scroll events
 	on the canvas
 	(e_week_view_on_button_press): don't scroll here
 	(e_week_view_on_scroll): scroll here
 
 	* gui/e-day-view.c (e_day_view_init): listen for scroll events on
 	the time and main canvases
 	(e_day_view_on_main_canvas_button_press): don't scroll here
 	(e_day_view_on_main_canvas_scroll): scroll here 
 	(e_day_view_on_time_canvas_scroll): and here
	
2003-05-15  JP Rosevear  <jpr@ximian.com>
 
 	Fixes #43029
 	
 	* gui/e-week-view.c (e_week_view_init): don't listen for destroy
 	signal
 	(e_week_view_destroy): check for NULL and make invisible NULL
 	after we destroy it, unref cursors and NULL them out as well,
 	guard against freeing events multiple times
 
 	* gui/e-day-view.c (e_day_view_destroy): check for NULL and make
 	invisible NULL after we destroy it, unref cursors and NULL them
 	out as well, guard against freeing events multiple times
 	(e_day_view_init): don't listen for destroy signal
 
 	* gui/e-calendar-table.c (e_calendar_table_init): don't listen for
 	destroy signal
 	(e_calendar_table_destroy): check for NULL and make invisible NULL
 	after we destroy it
	
2003-05-15  JP Rosevear  <jpr@ximian.com>
 
	Fixes #41930
 	
 	* idl/evolution-calendar.idl: Make sure everything that can raise
 	a NotFound exception lists it
	
2003-05-15  JP Rosevear  <jpr@ximian.com>

	* gui/e-meeting-time-sel.c
	(e_meeting_time_selector_refresh_free_busy): ref ourselves the
	number of times we'll get called back

2003-05-14  JP Rosevear  <jpr@ximian.com>

	* gui/e-tasks.c (e_tasks_destroy): guard against multiple destroys

	* cal-client/cal-client.c (cal_client_finalize): unref the
	bonobo listener

	* gui/gnome-cal.c (gnome_calendar_destroy): guard against multiple
	destroy calls

	* gui/e-week-view.c (e_week_view_init): connect after destroy
	(invisible_destroyed): don't unref, its already destroyed
